ajout d'un mesh

--- a/app/libs/panels/inspector.handlebars
+++ b/app/libs/panels/inspector.handlebars
@@ -1,5 +1,7 @@
 <span class="btn btn-small" {{action creerSphere }}>+sphere</span>
 <span class="btn btn-small" {{action creerCube }}>+cube</span>
+<span class="btn btn-small" {{action createHyperCube }}>+cc</span>
+
 {{controllers.inspector.content.name}}
 {{input value=controllers.inspector.content.name}}
 {{input value=controllers.inspector.content.x type=number}}
