--- a/app/libs/panels/panel.handlebars
+++ b/app/libs/panels/panel.handlebars
@@ -1,4 +1,4 @@
-<div class="well span1">
+<div class="well well-small">
   <ul class="nav nav-list">
 {{!     <li>
       <span class="btn btn-small"><i class="icon-circle-blank"></i></span>
